style.css
* {
    margin:0;
    padding:0;
    box-sizing:border-box;
}

html, body {
    font-family:'Raleway', sans-serif;
    font-size:10px;
    background-color:rgba(245, 223, 205); 
    color:#FFF;
    scroll-behavior: smooth;
}

header {
    position:relative;
    height:100vh;
    width:100vw;
    max-width:100%;
}

.background {
    height:100%;
    width:100%;
    background-image:linear-gradient(to bottom, rgba(245, 223, 205,.7),rgba(245, 223, 205,.75),rgba(245, 223, 205,1)),url(./assets/header-image.jpg);
    background-size:cover;
    background-position:center;
    filter:blur(.4rem);
}

.headline-cover {
    position:absolute;
    top:0;
    height:100%;
    width:100%;
}

.headline-cover-relative {    
    position:relative;
    height:100%;
    width:100%;
    display:flex;
    align-items: center;
    justify-content: center;
}

.header {
    color:rgb(70, 70, 70);
    background-color:rgba(255, 255, 255, 0.65);
    padding:2rem;
    border-radius:.5rem;
    max-width:80%;
}

.header-main {
    display:block;
    letter-spacing: 1rem;
    font-size:6.4rem;
    text-transform: uppercase;
    text-align:center;
    font-weight:400;
}
.header-sub {
    display:block;
    letter-spacing: .75rem;
    font-weight:400;
    text-align:center;
    font-size:3.2rem;
}



.arrow-container {
    position:absolute;
    bottom:0;
    width:100%;
    height:15%;
    background-image: linear-gradient(to bottom, rgba(245, 223, 205,0),rgba(245, 223, 205,.5),rgba(245, 223, 205,1));
    display:flex;
    align-items:center;
    justify-content:center;
    flex-direction:column;
}


#header-instruction {
    color: #000;
    font-weight:bold;
    font-size:2.4rem;
}

.btn:link,
.btn:visited{
    padding:.5rem 4rem;
    background-image:linear-gradient(to bottom, rgba(245, 223, 205, 1),#FFF,rgba(245, 223, 205, 1));
    border-radius:10rem;
    text-decoration:none;
    text-transform:uppercase;
    margin-bottom:.5rem;
    transition:all .2s;
    box-shadow:0 .3rem .7rem rgba(0,0,0,.2);
    position:relative;
}

.btn:hover{
    transform:translateY(-.3rem);
    box-shadow:0 .5rem 1rem rgba(0, 0, 0, .2);
}

.btn:active {
    transform:translateY(-.1rem);
    box-shadow:0 .25rem .5rem rgba(0,0,0,.2);
}


.arrows {
    display:flex;
    flex-direction:column;
    justify-content:space-around;
    align-items:space-around;
}
.arrow {
    height:2.5rem;
    width:2.5rem;
    border:.4rem  solid;
    transform:rotate(45deg);
    border-color:transparent black black transparent;
    margin:-.7rem;
    animation-name:arrow-appear;
    animation-duration: 3.5s;
    animation-iteration-count: infinite;
    animation-timing-function: linear;
    opacity:0;
}
#arrow-one {
    animation-delay:.5s;
}
#arrow-two {
    animation-delay: 1s;
}
#arrow-three {
    animation-delay: 1.5s;
}

.about {
    display:flex;
    justify-content: space-around;
    align-content:space-around;
    align-items:center;
    margin-top:3rem;
    padding:4rem;
    height:100vh;
    min-height:70vh;
    max-height:100vh;
}

.image-container {
    height:80%;
    width:40%;
    background:url('./assets/customer-drinking-coffee.jpg');
    background-size:cover;
    background-position:top;
    

}



.about-frost {
    min-width:33.33%;
    min-height:33.33%;
    max-width:50%;
    max-height:50%;
    background-color:rgba(255, 255, 255, 0.65);
    border-radius:.5rem;
    color:black;
    padding:1rem;
    display:flex;
    justify-content: center;
    align-items: center;
}

.about-header {
    font-size:3.2rem;
}

.about-text {
    font-size:2rem;
}























@keyframes arrow-appear {
    0% {
        opacity:0;
    }
    50% {
        opacity:1;
    }
    100% {
        opacity:0;
    }
}


@media (max-width:802px) {
    html,body{
        font-size:9px;
    }
}

@media(max-width:714px) {
    html,body {
        font-size:8px;
    }

    .about {
        height:100vh;
        flex-direction:column;
    }

    .image-container{
        width:100%;
        max-height:400px;
    }

    .about-frost {
        width:100%;
        max-width:100%;
    }

    .about-header {
        font-size:3.2rem;
    }
    
    .about-text {
        font-size:2.5rem;
    }


}

@media(max-width:634px) {
    html,body {
        font-size:7px;
    }
}

@media(max-width:558px) {
    html,body {
        font-size:6px;
    }
}

